--- a/codingBlock/Properties/Resources.resx
+++ b/codingBlock/Properties/Resources.resx
@@ -154,4 +154,7 @@
   <data name="starBorder" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\starBorder.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="trashCan" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\trashCan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
